# voice-control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
core/: AudioBuffer.h  Biquad.cpp  Biquad.h  Compressor.cpp  Compressor.h  DeEsser.cpp  DeEsser.h  DenoiseStreamer.cpp  DenoiseStreamer.h  Denoiser.cpp  Denoiser.h  Ducker.cpp  Ducker.h  Eq.cpp  Eq.h  EqSection.cpp  EqSection.h  Limiter.cpp  Limiter.h  LiveLimiter.cpp  LiveLimiter.h  LiveVoiceChain.cpp  LiveVoiceChain.h  LoudnessNormalizer.cpp  LoudnessNormalizer.h  PitchDetector.cpp  PitchDetector.h  Presets.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  VoiceChain.cpp  VoiceChain.h  WavIo.cpp  WavIo.h
desktop-juce/: DuckView.h  ExportComponent.cpp  ExportComponent.h  FileDropComponent.cpp  FileDropComponent.h  GrMeter.h  Main.cpp  MainComponent.cpp  MainComponent.h  MusicClip.h  MusicTimeline.cpp  MusicTimeline.h  NeuralNetworkPanel.cpp  NeuralNetworkPanel.h  PreviewPlayer.cpp  PreviewPlayer.h  ProcessingEngine.cpp  ProcessingEngine.h  ProjectManagerComponent.h  SettingsComponent.cpp  SettingsComponent.h  SpectrumView.cpp  SpectrumView.h  Theme.h  VoiceKnobs.cpp  VoiceKnobs.h
docs/: audio-processing-architecture.md
docs/superpowers/plans/: 2026-06-03-fixed-chain-intensity.md  2026-06-17-native-preprocessed-denoise.md
gui-plugin-experiment/: CMakeLists.txt
gui-plugin-experiment/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
research/noise_removal/: README.md  candidate_research.md  requirements.txt
research/noise_removal/experiments/denoise_deepfilternet/: README.md
research/noise_removal/experiments/denoise_deepfilternet/configs/: evaluation.json
research/noise_removal/experiments/denoise_deepfilternet/scripts/: run_deepfilternet.py
research/noise_removal/tools/listening_review/: README.md  server.py
scripts/: bundle_ffmpeg_macos.sh  package-macos.sh
spec/: plan-background-music-ducking.md  spec-design-analysis-state-and-responsive-visuals.md
tests/: DenoiseCalib.cpp  DspBehaviorTests.cpp  RenderDenoiseVariants.cpp
video/: FFmpeg.cpp  FFmpeg.h
